[package]
name = "ENTSOE_Client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
chrono = "0.4"
phf = { version = "0.11", features = ["macros"] }
quick-xml = "0.23.0"